IA-1754: working out ports and custom template errors

--- a/ckan/overrides/header.html
+++ b/ckan/overrides/header.html
@@ -98,7 +98,7 @@
         </ul>
       </nav>
       {% endblock %} {% block header_site_search %}
-      <form class="section site-search simple-input" action="{% url_for controller='package', action='search' %}" method="get">
+      <form class="section site-search simple-input" action="{% url_for controller='dataset', action='search' %}" method="get">
         <div class="field">
           <label for="field-sitewide-search">{% block header_site_search_label %}{{ _('Search Datasets') }}{% endblock %}</label>
           <input id="field-sitewide-search" type="text" class="form-control" name="q" placeholder="{{ _('Search') }}" />
